package CoucheLogique;

public class ProxyDossier {

    private Dossier dossier;

    ProxyDossier(Dossier dossier) {
        this.dossier = dossier;
    }
}
